infrastructure/cluster-rancher/ingress-nginx-lb.yaml
---
# Service LoadBalancer pour exposer l'Ingress Controller RKE2 via MetalLB
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: rke2-ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
